# ServerApp

./: .gitmodules  CMakeLists.txt  Readme.md  main.cpp
cmake/: build.cmake  utils.cmake
lib/disruptor/: BlockingQueue.h  IExecutor.h  ITaskScheduler.h  Readme.md  RingBuffer.h  TaskScheduler.h
lib/framework/app/: App.cpp  App.h  IApp.h
lib/framework/extensionsystem/: Extension.cpp  Extension.h  ExtensionManager.cpp  ExtensionManager.h  IExtension.h  IExtensionManager.h
lib/server/app/: ServerApp.cpp  ServerApp.h
lib/server/extensions/core/: CoreConstants.h  CoreExtension.cpp  CoreExtension.h  ICoreExtension.h
lib/server/extensions/datamanager/: Data.h  DataManagerConstants.h  DataManagerExtension.cpp  DataManagerExtension.h  IDataManagerExtension.h
lib/server/extensions/grpcserver/: GrpcServerConstants.h  IServerExtension.h  RealtimeService.cpp  RealtimeService.h  ServerExtension.cpp  ServerExtension.h
lib/server/extensions/module/: LoopIncParamProducer.h  MetaLoopIncParam.h  ModuleExtension.cpp  ModuleExtension.h  ModuleExtensionFactory.cpp  ModuleExtensionFactory.h
lib/server/extensionsystem/: ServerExtensionManager.cpp  ServerExtensionManager.h
lib/server/framework/datamanager/: IBiChannel.h  IDownloadChannel.h  ITransferChannel.h  IUploadChannel.h  QueueBiChannel.h  TransferChannel.h
scripts/: generate_test_coverage.sh
tests/benchmark/: BlockingQueueBenchmark.cpp
tests/manual/: realtimeservicetest.sh  serviceconnecttest.sh
tests/unit/disruptor/: BlockingQueueTest.cpp  RingBufferTest.cpp  TaskSchedulerTest.cpp
(+23 files in other folders)
